--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "homepage": "http://Lyubosumaz.github.io/portfolio-react-deploy",
-  "name": "portfolio-react-deploy",
-  "version": "0.1.0",
+  "homepage": "https://lyubosumaz.github.io/react-portfolio-deploy/",
+  "name": "react-portfolio-deploy",
+  "version": "0.6.0",
   "private": true,
-<<<<<<< Updated upstream
-=======
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -17,33 +15,25 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.3.8"
   },
->>>>>>> Stashed changes
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "gh-pages": "^3.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.3",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-<<<<<<< Updated upstream
-=======
   "husky": {
     "hooks": {
       "pre-commit": "npm run test"
     }
   },
->>>>>>> Stashed changes
   "eslintConfig": {
     "extends": [
       "react-app",
