--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "build": "react-scripts build",
     "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
+    "test:staged": "CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "npm run test:staged"
     }
   },
   "eslintConfig": {
