--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
   "homepage": "https://lyubosumaz.github.io/react-portfolio-deploy/",
   "name": "react-portfolio-deploy",
-  "version": "0.6.0",
+  "version": "0.6.7",
   "private": true,
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^13.0.13",
-    "@types/gh-pages": "^3.0.0",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "gh-pages": "^3.1.0",
-    "husky": "^4.3.8"
-  },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,17 +10,34 @@
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.0.13",
+    "@types/gh-pages": "^3.0.0",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/prettier": "^2.2.3",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "gh-pages": "^3.1.0",
+    "husky": "^4.3.8",
+    "prettier": "2.3.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "test:staged": "CI=true react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "version:bump": "--no-git-tag-version version patch",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test:staged"
+      "pre-commit": "npm run format && git add -A . && test:staged"
     }
   },
   "eslintConfig": {
